# toolbx-containers

./: .editorconfig  .env.example  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .tool-versions  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: build-and-publish-image.yaml  bump-tool-sha.yaml  bump-tools-image-sha.yaml  container.yaml  lint-and-test.yaml  pre-commit.yaml  prune-ghcr-images.yaml  update-tools-sha.yaml
tasks/: __init__.py  build.py  config.py  dev.py  update.py
test/: asdf.bats  chromium.bats  common.sh  fonts.bats  host-spawn.bats  node.bats  opencode.bats  packages.bats  playwright.bats  python.bats
